Highlight Hi-Pri with red

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -3,8 +3,8 @@
     margin-right: 20px;
   }
 
-.highlightGreen {
-    color: green;
+.highlightRed {
+    color: red;
     font-weight: bold;
   }
   
