--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -10,7 +10,7 @@
       <li *ngFor="let todo of todoStore.todos" [class.completed]="todo.completed" [class.editing]="todo.editing">
         <div class="view">
           <input class="toggle" type="checkbox" (click)="toggleCompletion(todo)" [checked]="todo.completed">
-          <label #priorityLabel>{{todo.priority}}</label><label (dblclick)="editTodo(todo)">{{todo.title}}</label>
+          <label [class.highlightRed]="todo.priority === 'Hi-Pri'">{{todo.priority}}</label><label (dblclick)="editTodo(todo)">{{todo.title}}</label>
           <button class="destroy" (click)="remove(todo)"></button>
         </div>
         <input class="edit" *ngIf="todo.editing" [value]="todo.title" #editedtodo (blur)="stopEditing(todo, editedtodo.value)" (keyup.enter)="updateEditingTodo(todo, editedtodo.value)" (keyup.escape)="cancelEditingTodo(todo)">
