--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -10,12 +10,11 @@
       <li *ngFor="let todo of todoStore.todos" [class.completed]="todo.completed" [class.editing]="todo.editing">
         <div class="view">
           <input class="toggle" type="checkbox" (click)="toggleCompletion(todo)" [checked]="todo.completed">
-          <select [(ngModel)]="todo.priority" [class.highlightGreen]="todo.priority === 'Hi-Pri'">
+          <label><select [(ngModel)]="todo.priority" [class.highlightGreen]="todo.priority === 'Hi-Pri'">
             <option value="Hi-Pri">Hi-Pri</option>
             <option value="Medium">Medium</option>
             <option value="Low">Low</option>
-          </select>
-          <label (dblclick)="editTodo(todo)">{{todo.title}}</label>
+          </select></label><label (dblclick)="editTodo(todo)">{{todo.title}}</label>
           <button class="destroy" (click)="remove(todo)"></button>
         </div>
         <input class="edit" *ngIf="todo.editing" [value]="todo.title" #editedtodo (blur)="stopEditing(todo, editedtodo.value)" (keyup.enter)="updateEditingTodo(todo, editedtodo.value)" (keyup.escape)="cancelEditingTodo(todo)">
