Add highlight Red to change background of priority selection drop down

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -4,7 +4,7 @@
   }
 
 .highlightRed {
-    color: red;
-    font-weight: bold;
+  background-color: red; /* ✅ works in most browsers */
+  font-weight: bold;
   }
   
