--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -10,7 +10,7 @@
       <li *ngFor="let todo of todoStore.todos" [class.completed]="todo.completed" [class.editing]="todo.editing">
         <div class="view">
           <input class="toggle" type="checkbox" (click)="toggleCompletion(todo)" [checked]="todo.completed">
-          <label><select [(ngModel)]="todo.priority" [class.highlightGreen]="todo.priority === 'Hi-Pri'">
+          <label><select [(ngModel)]="todo.priority" [class.highlightRed]="todo.priority === 'Hi-Pri'">
             <option value="Hi-Pri">Hi-Pri</option>
             <option value="Medium">Medium</option>
             <option value="Low">Low</option>
