Has the sort on prioity code in store.ts, but noticed that it does not sort properly, and the updated prioirties do not seem to be saving

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -4,7 +4,7 @@
   }
 
 .highlightRed {
-  background-color: red; /* ✅ works in most browsers */
+  background-color: red; 
   font-weight: bold;
   }
   
