fixed injection error, by adding httpclient to config.ts

--- a/angular-client/src/app/login.component.html
+++ b/angular-client/src/app/login.component.html
@@ -7,6 +7,7 @@
       <button type="submit">Login</button>
       <div *ngIf="error" class="error">{{ error }}</div>
     </form>
+    <p>Don't have an account? <a routerLink="/register">Register here</a></p>
   </div>
 
 
