Imported routermodule, so the links finally wokr

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-login></app-login>
+<router-outlet></router-outlet>
+
 <!-- <app-login *ngIf="!isLoggedIn()"></app-login> -->
 
 <div *ngIf="isLoggedIn()">
@@ -33,4 +34,5 @@
     </footer>
   </section>
 </div>
+
 
