registration form updates

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <!-- <app-login *ngIf="!isLoggedIn()"></app-login> -->
 
-<div *ngIf="isLoggedIn()">
+<!-- <div *ngIf="isLoggedIn()"> -->
   <section class="todoapp">
   
     <header class="header">
@@ -33,6 +33,6 @@
       <button class="clear-completed" *ngIf="todoStore.getCompleted().length > 0" (click)="removeCompleted()">Clear completed</button>
     </footer>
   </section>
-</div>
+<!-- </div> -->
 
 
