--- a/angular-client/src/app/registration.component.html
+++ b/angular-client/src/app/registration.component.html
@@ -1,6 +1,9 @@
 <h2>Register</h2>
-<form (ngSubmit)="register()">
+<form (ngSubmit)="register()" #registrationForm="ngForm">
     <input type="text" [(ngModel)]="userData.username" name="username" placeholder="Username" required>
     <input type="password" [(ngModel)]="userData.password" name="password" placeholder="Password" required>
-    <button type="submit">Register</button>
-  </form>
+    <button type="submit" [disabled]="!registrationForm.valid">Register</button>
+    
+    <div *ngIf="error" style="color: red; margin-top: 10px;">{{ error }}</div>
+    <div *ngIf="success" style="color: green; margin-top: 10px;">{{ success }}</div>
+</form>
