--- a/angular-client/src/app/login.component.html
+++ b/angular-client/src/app/login.component.html
@@ -1,11 +1,13 @@
 <!-- Show login form if not logged in -->
 <div class="login-container">
     <h2>Login</h2>
-    <form (ngSubmit)="login()">
+    <form (ngSubmit)="login()" #loginForm="ngForm">
       <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required>
       <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <div *ngIf="error" class="error">{{ error }}</div>
+      <button type="submit" [disabled]="!loginForm.valid">Login</button>
+      
+      <div *ngIf="error" style="color: red; margin-top: 10px;">{{ error }}</div>
+      <div *ngIf="success" style="color: green; margin-top: 10px;">{{ success }}</div>
     </form>
     <p>Don't have an account? <a routerLink="/register">Register here</a></p>
   </div>
